content/core/1.3.0/reference/vendr-web-models/orderdto.md
---
title: OrderDto
description: API reference for OrderDto in Vendr, the eCommerce solution for Umbraco v8+
---
## OrderDto

```csharp
public class OrderDto : OrderBasicDto
```

**Inheritance**

* class [OrderBasicDto](../orderbasicdto/)

**Namespace**
* [Vendr.Web.Models](../)

### Constructors

#### OrderDto

The default constructor.

```csharp
public OrderDto()
```


### Properties

#### AppliedDiscountCodes

```csharp
public List<string> AppliedDiscountCodes { get; set; }
```


---

#### AppliedGiftCardCodes

```csharp
public List<string> AppliedGiftCardCodes { get; set; }
```


---

#### CustomerEmail

```csharp
public string CustomerEmail { get; set; }
```


---

#### CustomerReference

```csharp
public string CustomerReference { get; set; }
```


---

#### OrderLines

```csharp
public List<OrderLineDto> OrderLines { get; set; }
```


---

#### OrderStatusCode

```csharp
public int OrderStatusCode { get; set; }
```


---

#### PaymentCountry

```csharp
public CountryBasicDto PaymentCountry { get; set; }
```


---

#### PaymentCountryId

```csharp
public Guid? PaymentCountryId { get; set; }
```


---

#### PaymentMethodPrice

```csharp
public string PaymentMethodPrice { get; set; }
```


---

#### PaymentMethodPriceWithoutDiscount

```csharp
public string PaymentMethodPriceWithoutDiscount { get; set; }
```


---

#### PaymentRegion

```csharp
public RegionBasicDto PaymentRegion { get; set; }
```


---

#### PaymentRegionId

```csharp
public Guid? PaymentRegionId { get; set; }
```


---

#### Properties

```csharp
public Dictionary<string, PropertyValueDto> Properties { get; set; }
```


---

#### ShippingCountry

```csharp
public CountryBasicDto ShippingCountry { get; set; }
```


---

#### ShippingCountryId

```csharp
public Guid? ShippingCountryId { get; set; }
```


---

#### ShippingMethodPrice

```csharp
public string ShippingMethodPrice { get; set; }
```


---

#### ShippingMethodPriceWithoutDiscount

```csharp
public string ShippingMethodPriceWithoutDiscount { get; set; }
```


---

#### ShippingRegion

```csharp
public RegionBasicDto ShippingRegion { get; set; }
```


---

#### ShippingRegionId

```csharp
public Guid? ShippingRegionId { get; set; }
```


---

#### SubtotalPrice

```csharp
public string SubtotalPrice { get; set; }
```


---

#### SubtotalPriceDiscount

```csharp
public string SubtotalPriceDiscount { get; set; }
```


---

#### SubtotalPriceWithPreviousDiscount

```csharp
public string SubtotalPriceWithPreviousDiscount { get; set; }
```


---

#### TotalGiftCardAmount

```csharp
public string TotalGiftCardAmount { get; set; }
```


---

#### TotalPriceDiscount

```csharp
public string TotalPriceDiscount { get; set; }
```


---

#### TotalPriceTax

```csharp
public string TotalPriceTax { get; set; }
```


---

#### TotalPriceWithPreviousDiscount

```csharp
public string TotalPriceWithPreviousDiscount { get; set; }
```


---

#### TotalReceived

```csharp
public string TotalReceived { get; set; }
```


---

#### TransactionAmount

```csharp
public string TransactionAmount { get; set; }
```


---

#### TransactionFee

```csharp
public string TransactionFee { get; set; }
```


---

#### ZeroAmount

```csharp
public string ZeroAmount { get; set; }
```


<!-- DO NOT EDIT: generated by xmldocmd for Vendr.Web.dll -->
